# webdriver-cdp

./: Cargo.toml  Dockerfile  README.md  run-local.sh  run-tests.sh
.github/workflows/: docker.yml  release.yml  test.yml
src/: cdp.rs  chrome.rs  error.rs  main.rs  session.rs  session_store.rs
src/handlers/: actions.rs  admin.rs  alerts.rs  cookies.rs  element_actions.rs  element_info.rs  elements.rs  js.rs  mod.rs  navigation.rs  screenshots.rs  session.rs  status.rs  timeouts.rs  window.rs
