[package]
name = "webdriver-cdp"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "webdriver-cdp"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = "0.8"
base64 = "0.22"
dashmap = "6"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
